window: Check context menu item sensitivity using editor state

This allows us to get the context menu right without flickering.
Notably, we can now hide the copy context menu item once again, without
flickering, when it is not available.

https://bugzilla.gnome.org/show_bug.cgi?id=772106